# roomies

./: .gitignore  Cargo.toml  README.md  sample_data.xlsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  pdf_generator.rs  solver.rs
ui/: app.js  index.html  style.css
